// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allOf operator support renders simple allOf 1`] = `
"<div class="openapi">

# allOf

## Request

#||| **method** | **url** | **description** ||

|| 
\`\`\`
POST
\`\`\`
 | 
\`\`\`
http://localhost:8080/test
\`\`\`
 | 
\`\`\`
Generated server url
\`\`\`
 |||#

#### Body

{% cut "application/json" %}


\`\`\`
{
    "type": "string",
    "foo": "string",
    "name": "string"
}
\`\`\`


{% endcut %}


#||| **Name** | **Type** | **Description** ||

|| type | string |  ||

|| foo | string |  ||

|| name | string |  |||#

## Responses

## 200 OK

Base 200 response

#### Body

{% cut "application/json" %}


\`\`\`
{
    "type": "string",
    "baz": "string"
}
\`\`\`


{% endcut %}


#||| **Name** | **Type** | **Description** ||

|| name | string | <span style="color:gray;">Default</span>: \`a\` ||

|| type | string |  ||

|| baz | string |  |||#
<!-- markdownlint-disable-file -->

</div>"
`;

exports[`allOf operator support renders single allOf 1`] = `
"<div class="openapi">

# allOf

## Request

#||| **method** | **url** | **description** ||

|| 
\`\`\`
POST
\`\`\`
 | 
\`\`\`
http://localhost:8080/test
\`\`\`
 | 
\`\`\`
Generated server url
\`\`\`
 |||#

#### Body

{% cut "application/json" %}


\`\`\`
{
    "pet": {
        "type": "string",
        "foo": "string"
    }
}
\`\`\`


{% endcut %}


#||| **Name** | **Type** | **Description** ||

|| pet | [Cat](#cat) | Cat class |||#

### Cat

Cat class

#||| **Name** | **Type** | **Description** ||

|| type | string |  ||

|| foo | string |  |||#

## Responses

## 200 OK

Base 200 response

#### Body

{% cut "application/json" %}


\`\`\`
{
    "pet": {
        "type": "string",
        "foo": "string"
    }
}
\`\`\`


{% endcut %}


#||| **Name** | **Type** | **Description** ||

|| pet | [Cat](#cat) | Cat class |||#
<!-- markdownlint-disable-file -->

</div>"
`;
